turning Claude Code generated code into initial implementation of the MCP server. It works, but requires some further work (error handling, etc.)

--- a/MySqlMcpServer/appsettings.json
+++ b/MySqlMcpServer/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=testdb;Uid=root;Pwd=password;"
-  },
-  "ServerConfig": {
-    "Name": "mysql-ddl-server",
-    "Version": "1.0.0"
-  }
+  "MCP_MySQL_ConnectionString": "Server=localhost;Database=testdb;Uid=root;Pwd=password;"
 }
