--- a/MySqlMcpServer/MySqlMcpServer.csproj
+++ b/MySqlMcpServer/MySqlMcpServer.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
