--- a/MySqlMcpClient/MySqlMcpClient.csproj
+++ b/MySqlMcpClient/MySqlMcpClient.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
